--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -5,11 +5,18 @@
     <uses-permission android:name="android.permission.INTERNET" />
     <uses-permission android:name="android.permission.WAKE_LOCK" />
 
-    <permission android:name="com.example.user.cram1001.permission.C2D_MESSAGE"
+    <permission
+        android:name="com.example.user.cram1001.permission.C2D_MESSAGE"
         android:protectionLevel="signature" />
-    <uses-permission android:name="com.example.user.cram1001.permission.C2D_MESSAGE" />
 
-    <uses-permission android:name="android.permission.VIBRATE"/>
+    <uses-permission android:name="com.example.user.cram1001.permission.C2D_MESSAGE" />
+    <!-- 通知震動 -->
+    <uses-permission android:name="android.permission.VIBRATE" />
+
+    <!-- 藍芽 -->
+    <uses-permission android:name="android.permission.BLUETOOTH" />
+    <uses-permission android:name="android.permission.BLUETOOTH_ADMIN" />
+    <uses-permission android:name="android.permission.RECEIVE_BOOT_COMPLETED" />
 
     <application
         android:allowBackup="true"
@@ -22,19 +29,22 @@
         <receiver
             android:name="com.google.android.gms.gcm.GcmReceiver"
             android:exported="true"
-            android:permission="com.google.android.c2dm.permission.SEND" >
+            android:permission="com.google.android.c2dm.permission.SEND">
             <intent-filter>
                 <action android:name="com.google.android.c2dm.intent.RECEIVE" />
+
                 <category android:name="com.example.user.cram1001.GCM" />
             </intent-filter>
             <intent-filter>
                 <action android:name="com.google.android.c2dm.intent.REGISTRATION" />
+
                 <category android:name="com.example.user.cram1001.GCM" />
             </intent-filter>
         </receiver>
+
         <service
             android:name=".GCM.MyGcmListenerService"
-            android:exported="false" >
+            android:exported="false">
             <intent-filter>
                 <action android:name="com.google.android.c2dm.intent.RECEIVE" />
             </intent-filter>
@@ -46,7 +56,6 @@
                 <action android:name="com.google.android.gms.iid.InstanceID" />
             </intent-filter>
         </service>
-
 
         <!-- ↑GCM -->
 
@@ -81,7 +90,9 @@
         <activity android:name=".AddScheduleActivity" />
         <activity android:name=".CheckActivity" />
         <activity android:name=".attendanceActivity" />
-        <activity android:name=".GcmActivity"></activity>
+        <activity android:name=".NotificationActivity" />
+        <activity android:name=".BeaconActivity" />
+        <activity android:name=".CheckParentsActivity"></activity>
     </application>
 
 </manifest>
