假單可顯示+學生已分班

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -108,7 +108,7 @@
             android:name=".MapsActivity"
             android:label="@string/title_activity_maps"></activity>
         -->
-        <activity android:name=".Ok_teacherActivity"></activity>
+        <activity android:name=".Qk_teacherActivity"></activity>
     </application>
 
 </manifest>
