--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -27,8 +27,8 @@
 
     <application
         android:allowBackup="true"
-        android:icon="@drawable/logo1112"
-        android:label="@string/app_name"
+        android:icon="@drawable/logobig"
+        android:label="智慧安心班"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
 
