新增老師發送孩子完成功課通知+孩子狀態可隨時更新

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -107,7 +107,8 @@
             android:name=".MapsActivity"
             android:label="@string/title_activity_maps"></activity>
         -->
-        <activity android:name=".Qk_teacherActivity"></activity>
+        <activity android:name=".Qk_teacherActivity" />
+        <activity android:name=".NotifigohomeActivity"></activity>
     </application>
 
 </manifest>
